# Automation-with-Python

./: README.md  pyproject.toml  requirements.txt
 New/: main.py
New/: main.py
file-organizer/: __init__.py
log-analyzer/: README.md  __init__.py
src/automation_tools/: __init__.py  aws_clients.py  aws_cloudwatch_logs.py  aws_ec2_reporter.py  aws_s3_backup.py  file_organizer.py  log_analyzer.py
tests/: test_aws_cloudwatch_logs.py  test_aws_ec2_reporter.py  test_aws_s3_backup.py  test_file_organizer.py  test_log_analyzer.py
